attempt to fix overlapping elements

--- a/css/index.css
+++ b/css/index.css
@@ -143,7 +143,6 @@ button {
   margin: 10vh auto 0 auto;
   max-width: 700px;
   max-height: 150px;
-  overflow: hidden;
   position: relative;
   width: 100%;
   height: 100%;
@@ -234,7 +233,7 @@ img {
   color: black;
   font-size: 2.5ch;
   border-bottom: 1px dotted currentColor;
-  background-color: rgba(100, 110, 245, 0.404);
+  background-color: rgba(100, 110, 245, 0.692);
   position: relative;
   letter-spacing: 0.25ch;
 }
@@ -468,6 +467,6 @@ img {
   }
 
   .summon_banner {
-    max-width: 400px;
+    max-width: 90%;
   }
 }
